Minor fix for light-mode button/scrollbar colours.

--- a/css/base.css
+++ b/css/base.css
@@ -104,6 +104,7 @@ a {
     background: #eee;
     border: 1px solid #aaa;
     border-radius: 3px;
+    color: inherit;
     cursor: pointer;
     margin: 0 5px;
     min-width: 30px;
@@ -184,9 +185,14 @@ a {
     }
 }
 
+::-webkit-scrollbar {
+    background: #eee;
+}
+
 .scrolling {
     overflow-x: hidden;
     overflow-y: scroll;
+    scrollbar-color: #bbb #eee;
 }
 
 .flex-nav {
